Add ObjectInfo and Property record to have structured informations
* Use ObjectInfo instead of string to have object info
* Add property class to have info about the property
* Refactor the code to use these data structure
* Remove method getProperties and use getObjects instead wich give all necessary informations
* Rework the page reference management and write unique method to convert reference to path for REST, synced dir or mvn repos path.